--- a/_posts/2019-12-22-the-us-narrative-today.html
+++ b/_posts/2019-12-22-the-us-narrative-today.html
@@ -1,106 +1,106 @@
 ---
 images:
-- name: mistywoods-babyfoot-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-graham-sutherland.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-plentiful.jpg
-- name: IMG_4038_blue_circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/IMG_4038_blue_circuit.jpg
-- name: adam-smith-adam-smith-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-spagetti-accident.jpg
-- name: birdhouse-birdhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-dresden.jpg
-- name: christianity-christianity-under-construction-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-jap-wav-pr.jpg
-- name: locked-up-steam-lock-up-steam-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-satan-red.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-wols.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-bright-sand.jpg
-- name: capital-battle-capitolbattle-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-diego-rivera1.jpg
-- name: subway-subway-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-circuit.jpg
-- name: stories-servers-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-servers-blue-circuit.jpg
-- name: blossombar-purple-storm-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-24-99.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
-- name: stalin-time-dinosaur-stepping-on-lego.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dinosaur-stepping-on-lego.jpg
-- name: oldroad-old-road-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-aqua.jpg
-- name: old-school-house-old-schoolhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-umberto-bocc.jpg
-- name: copper-circuit-boats-waterfront-bristol.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-boats-waterfront-bristol.jpg
-- name: braceros-domingo-ulloa-gauge-on-aircraft-carrier.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gauge-on-aircraft-carrier.jpg
-- name: bf-skinner-vancouver-waterfront_36556357642_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-vancouver-waterfront_36556357642_o.jpg
-- name: gypsymosaic-gypsy-eyes-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purple-storm.jpg
-- name: white-house-whitehouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
-- name: store-on-corner-oldcabin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin.jpg
-- name: braceros-domingo-ulloa-border-fence-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-border-fence-down-the-line.jpg
-- name: ellis-island-ellisisland-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-creativity.jpg
-- name: la-muse-fishing-ship-in-docks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fishing-ship-in-docks.jpg
-- name: aws-s3-bluelake-bluelake-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still.jpg
-- name: aws-s3-stories-containership-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-dali-three.jpg
-- name: windowmountain-window-mountain-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-missle.jpg
-- name: razorwire-DSC-0080-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-space-pizza.jpg
-- name: scream-DSC_0115.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0115.jpg
-- name: aws-s3-treeinhills-yellowtree-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-600.jpg
-- name: old-gas-pumps-oldgaspumps-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-dream.jpg
-- name: mediterranean-mediterranean-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-gan-vogh.jpg
-- name: downtown-trucksilo-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-mucha-mult.jpg
-- name: ellis-island-ellis-island-room-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-umberto-bocc.jpg
-- name: old-granary-field-oldhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
-- name: la-muse-fat-old-pigeon-on-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fat-old-pigeon-on-fence.jpg
-- name: store-on-corner-store-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crunch-paper.jpg
-- name: lincoln-memorial-lincolnmemorial-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crafty-painting.jpg
-- name: old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-oily-mcoilface.jpg
-- name: abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
-- name: losangelescloudyday-los-angeles-downtown-close-up.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-close-up.jpg
-- name: dragon-desert-desert-dragon-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-gred-mash.jpg
-- name: fence-mexico-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
-- name: stories-capital-battle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capital-battle-blue-circuit.jpg
-- name: abe-lincoln-one-space-pizza-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-space-pizza-file-00-00-15-87.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
-- name: carry-load-carryload-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-rainbow-festival.jpg
-- name: catacombs-catacombs-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smoking-cigarette.jpg
-- name: la-muse-city-clouds-building-crowded.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-clouds-building-crowded.jpg
+- name: server-cloud-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-clean-view.jpg
+- name: miamibeach-miamibeach-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-dali.jpg
+- name: file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00.jpg
+- name: bf-skinner-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-container-ship-in-seattle.jpg
+- name: window-window-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-bright-sand.jpg
+- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+- name: window-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-satan-red.jpg
+- name: nazi-invasion-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-working-on-railroad-2.jpg
+- name: old-gas-pumps-oldgaspumps-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-electricity.jpg
+- name: berlinwall2-berlinwall-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
+- name: old-school-house-old-schoolhouse-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit.jpg
+- name: locked-up-steam-lock-up-steam-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-rain.jpg
+- name: razorwire-DSC-0080-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-neo-instinct.jpg
+- name: amusement-park-amusement-park-2-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-smoking-cigarette.jpg
+- name: old-school-house-old-schoolhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
+- name: old-door-lock-old-door-lock-2-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-propaganda-leaflets.jpg
+- name: oldhouse-granaryfield-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-storm.jpg
+- name: oldtrain-oldtrain-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gred-mash.jpg
+- name: yosemite-yosemite-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-dream.jpg
+- name: art-museum-art-museum-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-mucha-mult.jpg
+- name: blossombar-crafty-painting-file-00-00-50-58.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-58.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+- name: razorcliff-razorcliff-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-storm.jpg
+- name: old-cabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
+- name: server-cloud-server-racks-clouds-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-satan-red.jpg
+- name: bluelake-far-away-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-00-00-00.jpg
+- name: aws-s3-mountainlake-mountainlake-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-1200.jpg
+- name: crow_pablo_blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_pablo_blue.jpg
+- name: stories-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
+- name: copper-circuit-do-not-turn-trolley-car.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-do-not-turn-trolley-car.jpg
+- name: oldcabin-store-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-gred-mash.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-deep-connections.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
+- name: server-cloud-server-racks-door-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sunday.jpg
+- name: supreme-court-supremecourt-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purp-paper.jpg
+- name: aws-s3-stories-adam-smith-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-blue-circuit-5.jpg
+- name: beach-rocks-beach-rocks-currents-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-creativity.jpg
+- name: abe-lincoln-one-space-pizza-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-space-pizza-file-00-00-07-91.jpg
+- name: udnie-IMG_6328.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6328.jpg
+- name: white-house-lawn-white-house-window-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-deep-connections.jpg
+- name: aws-s3-methuselah-methuselah-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still-600.jpg
+- name: old-granary-field-oldhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crunch-paper.jpg
+- name: blossombar-sand-paper-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sand-paper-file-00-00-00-00.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
+- name: downtown-los-angeles-downtown-la-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-atari-missle.JPG
+- name: border-fence-border-fence-on-hill-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purp-paper.jpg
+- name: oldcabin-store-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smooth-ride.jpg
+- name: mosaic-face-mosaic-face-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-free-woman.jpg
+- name: nazi-invasion-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-in-station-two-coming.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
 ---
 
